--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,20 @@
     @apply scroll-smooth;
   }
 
+  /* Scrollbar styling */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: rgb(var(--background-start-rgb));
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #15A1D1;
+    border-radius: 5px;
+  }
+
   html.dark {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 17, 24, 39;
