--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes fallAndFade {
+  0% {
+    transform: translateY(0) translateX(-50%) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100px) translateX(-50%) scale(0.5);
+    opacity: 0;
+  }
+}
+
 @layer base {
   :root {
     --foreground-rgb: 0, 0, 0;
